--- a/app/templates/app/comments.html
+++ b/app/templates/app/comments.html
@@ -31,7 +31,16 @@ l<div class="container">
                                 <i class="bi bi-eye" aria-hidden="true"></i>
                             </a>
 
-                            {# TODO: Hacer la accion de eliminar comentario #}
+                            <form action="{% url 'comment_delete' comment.event.id %}" method="POST">
+                                {% csrf_token %}
+                                <button class="btn btn-sm btn-outline-danger"
+                                    title="Eliminar"
+                                    type="submit"
+                                    aria-label="Eliminar"
+                                    titile="Eliminar">
+                                    <i class="bi bi-trash" aria-hidden="true"></i>
+                                </button>
+                            </form>
                     
                         </div>
                     </td>
