Agrega lista de comentarios en los detalles del evento

--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -44,5 +44,6 @@
             </div>
         </div>
     </div>
+    {% include 'app/event_comments.html' with comments=comments%}
 </div>
 {% endblock %}
