Agrega funcion del formulario para agregar un nuevo comentario a un evento

--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -44,6 +44,6 @@
             </div>
         </div>
     </div>
-    {% include 'app/event_comments.html' with comments=comments%}
+    {% include 'app/comments/event_comments.html' with comments=comments%}
 </div>
 {% endblock %}
