--- a/app/templates/app/categorys/categorys.html
+++ b/app/templates/app/categorys/categorys.html
@@ -28,7 +28,11 @@
                 <tr>
                     <td>{{ category.name }}</td>
                     <td>{{ category.description }}</td>
-                    <td>{{ category.num_events }} Eventos</td>
+                    <td>
+                        <span style="background-color: #f0f2f5; border-radius: 8px; padding: 3px 8px; display: inline-block; font-size: 0.8em;">
+                          {{ category.num_events }} Eventos
+                        </span>
+                    </td>
                     
                     <td>
                         <div class="hstack gap-1">
