--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -40,6 +40,17 @@
                             <p class="mb-0">{{ event.organizer }}</p>
                         </div>
                     </div>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="bg-light rounded-circle p-2 me-3">
+                            <i class="bi bi-tag text-primary"></i>
+                        </div>
+                        <div>
+                            <h6 class="mb-0">Categoria</h6>
+                            <span style="background-color: #f0f2f5; border-radius: 8px; padding: 3px 8px; display: inline-block; font-size: 0.8em;">
+                                <p class="mb-0">{{ event.category.name }}</p>
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
