--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -15,8 +15,14 @@
                 </a>
             {% endif %}
         </div>
+        <div class="d-flex justify-content-end mb-3 mt-2">
+            <a href="{% url 'purchase_ticket' event.id %}" class="btn btn-sm btn-outline-primary px-3 py-1">
+                Comprar Entrada
+            </a>
+        </div>
     </div>
     <div class="row">
+        
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Detalles del Evento</h5>
