--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -14,9 +14,8 @@
                     <i class="bi bi-pencil me-1"></i>Editar
                 </a>
             {% endif %}
+            </div>
         </div>
-    </div>
-    <div class="row">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Detalles del Evento</h5>
@@ -43,6 +42,63 @@
                 </div>
             </div>
         </div>
+
+        <!-- Sección de calificaciones y reseñas -->
+        {% include "app/rating/ratings_section.html" %}
     </div>
 </div>
+
+<style>
+    .rating {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        width: fit-content;
+        margin-top: 5px;
+    }
+    .rating input {
+        display: none;
+    }
+    .rating label {
+        cursor: pointer;
+        font-size: 1.5rem;
+        color: #ddd;
+        margin-right: 5px;
+    }
+    .rating label:hover,
+    .rating label:hover ~ label,
+    .rating input:checked ~ label {
+        color: #ffc107;
+    }
+    
+    /* Add styles for form fields */
+    #id_title {
+        display: block;
+        width: 100%;
+        padding: 0.375rem 0.75rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        border-radius: 0.25rem;
+    }
+    
+    #id_text {
+        display: block;
+        width: 100%;
+        padding: 0.375rem 0.75rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        border-radius: 0.25rem;
+        min-height: 100px;
+    }
+</style>
 {% endblock %}
