--- a/app/templates/app/rating/ratings_section.html
+++ b/app/templates/app/rating/ratings_section.html
@@ -31,6 +31,12 @@
                                     <i class="bi bi-pencil me-1"></i>Editar
                                 </button>
                             </form>
+                            <form method="post" action="{% url 'delete_rating' event.id %}">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-outline-danger btn-sm">
+                                    <i class="bi bi-trash me-1"></i>Eliminar
+                                </button>
+                            </form>
                         </div>
                     {% endif %}
                 </div>
