--- a/app/templates/app/categorys/category_form.html
+++ b/app/templates/app/categorys/category_form.html
@@ -14,17 +14,17 @@
 
             <div class="card">
                 <div class="card-body">
-                    <form action="{% url 'category_form' %}" method="POST">
+                    <form action="{% if category.id %}{% url 'category_edit' category.id %}{% else %}{% url 'category_form' %}{% endif %}" method="POST">
                         {% csrf_token %}
                         <div class="vstack gap-3">
                             <div>
-                                <label for="title" class="form-label">Nombre de la categoria</label>
+                                <label for="name" class="form-label">Nombre de la categoria</label>
                                 <input class="form-control"
-                                    id="name"
-                                    required=""
-                                    type="text"
-                                    value="{{ category.name }}"
-                                    name="name" />
+                                       id="name"
+                                       required=""
+                                       type="text"
+                                       value="{{ category.name }}"
+                                       name="name" />
                             </div>
                             <div>
                                 <label for="description" class="form-label">Descripción</label>
@@ -35,9 +35,15 @@
                                     rows="4"
                                     required="">{{ category.description }}</textarea>
                             </div>
-                            
+
                             <div>
-                                <button type="submit" class="btn btn-primary">Crear categoria</button>
+                                <button type="submit" class="btn btn-primary">
+                                    {% if category.id %}
+                                        Guardar cambios
+                                    {% else %}
+                                        Crear categoria
+                                    {% endif %}
+                                </button>
                             </div>
                         </div>
                     </form>
