Arregla visualizacion de entradas segun tipo de usuarios

--- a/app/templates/app/purchase_ticket.html
+++ b/app/templates/app/purchase_ticket.html
@@ -70,7 +70,8 @@
                                     class="form-control"
                                     id="numeroTarjeta"
                                     placeholder="1234 5678 9012 3456"
-                                />
+                                required
+                                    />
                             </div>
 
                             <div class="row">
@@ -78,6 +79,7 @@
                                     <label
                                         for="fechaExpiracion"
                                         class="form-label"
+                                        required
                                         >Fecha de expiración</label
                                     >
                                     <input
@@ -85,7 +87,8 @@
                                         class="form-control"
                                         id="fechaExpiracion"
                                         placeholder="MM/AA"
-                                    />
+                                        required
+                                        />
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="cvv" class="form-label"
@@ -96,7 +99,8 @@
                                         class="form-control"
                                         id="cvv"
                                         placeholder="123"
-                                    />
+                                        required
+                                        />
                                 </div>
                             </div>
 
@@ -109,7 +113,8 @@
                                     class="form-control"
                                     id="nombreTarjeta"
                                     placeholder="Juan Pérez"
-                                />
+                                    required
+                                    />
                             </div>
                         </div>
                         <div class="m-3">
