--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container py-5">
     <div class="row">
         <div class="d-flex justify-content-between align-items-center">
             <h1>{{ event.title }}</h1>
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="card">
+        <div class="card mt-2">
             <div class="card-body">
                 <h5 class="card-title">Detalles del Evento</h5>
                 <p class="card-text">{{ event.description }}</p>
