--- a/app/templates/app/events.html
+++ b/app/templates/app/events.html
@@ -1,69 +1,76 @@
-{% extends "base.html" %}
-
-{% block title %}Eventos{% endblock %}
-
-{% block content %}
-<div class="container">
+{% extends 'base.html' %} {% block content %}
+<div
+    class="container {% if user_is_organizer %}bg-info bg-opacity-25{% else %}bg-warning bg-opacity-25{% endif %} p-4 rounded"
+>
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Eventos</h1>
         {% if user_is_organizer %}
-            <a
-                href="{% url 'event_form' %}"
-                class="btn btn-primary"
-            >
-                <i class="bi bi-plus-circle me-2" aria-hidden="true"></i>
-                Crear Evento
-            </a>
+        <a href="{% url 'event_form' %}" class="btn btn-primary">
+            <i class="bi bi-plus-circle me-2" aria-hidden="true"></i>
+            Crear Evento
+        </a>
         {% endif %}
     </div>
+
     <table class="table">
         <thead>
             <tr>
-                <th>Título</th>
-                <th>Descripción</th>
+                <th>Nombre</th>
                 <th>Fecha</th>
+                <th>Ubicación</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
-            {% for event in events%}
-                <tr>
-                    <td>{{ event.title }}</td>
-                    <td>{{ event.description }}</td>
-                    <td>{{ event.scheduled_at|date:"d b Y, H:i" }}</td>
-                    <td>
-                        <div class="hstack gap-1">
-                            <a href="{% url 'event_detail' event.id %}"
-                               class="btn btn-sm btn-outline-primary"
-                               aria-label="Ver detalle"
-                               title="Ver detalle">
-                                <i class="bi bi-eye" aria-hidden="true"></i>
-                            </a>
-                            {% if user_is_organizer %}
-                                <a href="{% url 'event_edit' event.id %}"
-                                    class="btn btn-sm btn-outline-secondary"
-                                    aria-label="Editar"
-                                    title="Editar">
-                                    <i class="bi bi-pencil" aria-hidden="true"></i>
-                                </a>
-                                <form action="{% url 'event_delete' event.id %}" method="POST">
-                                    {% csrf_token %}
-                                    <button class="btn btn-sm btn-outline-danger"
-                                        title="Eliminar"
-                                        type="submit"
-                                        aria-label="Eliminar"
-                                        titile="Eliminar">
-                                        <i class="bi bi-trash" aria-hidden="true"></i>
-                                    </button>
-                                </form>
-                            {% endif %}
-                        </div>
-                    </td>
-                </tr>
+            {% for event in events %}
+            <tr>
+                <td>{{ event.title }}</td>
+                <td>{{ event.description }}</td>
+                <td>{{ event.scheduled_at|date:"d b Y, H:i" }}</td>
+                <td>
+                    <div class="hstack gap-1">
+                        <a
+                            href="{% url 'event_detail' event.id %}"
+                            class="btn btn-sm btn-outline-primary"
+                            aria-label="Ver detalle"
+                            title="Ver detalle"
+                        >
+                            <i class="bi bi-eye" aria-hidden="true"></i>
+                        </a>
+                        {% if user_is_organizer %}
+                        <a
+                            href="{% url 'event_edit' event.id %}"
+                            class="btn btn-sm btn-outline-secondary"
+                            aria-label="Editar"
+                            title="Editar"
+                        >
+                            <i class="bi bi-pencil" aria-hidden="true"></i>
+                        </a>
+                        <form
+                            action="{% url 'event_delete' event.id %}"
+                            method="POST"
+                        >
+                            {% csrf_token %}
+                            <button
+                                class="btn btn-sm btn-outline-danger"
+                                title="Eliminar"
+                                type="submit"
+                                aria-label="Eliminar"
+                                titile="Eliminar"
+                            >
+                                <i class="bi bi-trash" aria-hidden="true"></i>
+                            </button>
+                        </form>
+                        {% endif %}
+                    </div>
+                </td>
+            </tr>
             {% empty %}
-                <tr>
-                    <td colspan="4" class="text-center">No hay eventos disponibles</td>
-                </tr>
+            <tr>
+                <td colspan="4" class="text-center">
+                    No hay eventos disponibles
+                </td>
+            </tr>
             {% endfor %}
         </tbody>
     </table>
