--- a/app/templates/app/events.html
+++ b/app/templates/app/events.html
@@ -1,6 +1,11 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <div
-    class="container {% if user_is_organizer %}bg-info bg-opacity-25{% else %}bg-warning bg-opacity-25{% endif %} p-4 rounded"
+    class=" {% if user_is_organizer %}bg-info bg-opacity-25{% else %}bg-warning bg-opacity-25{% endif %}"
+    style="height: calc(100vh - 55.97px);"
+>
+<div
+    class="container p-4 rounded"
 >
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Eventos</h1>
@@ -74,5 +79,6 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 </div>
 {% endblock %}
